Seven new pages, several updates in 2 years

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -6,17 +6,17 @@ link: asteroid-belt
 ---
 
                 <p class="paragraph">
-                    The asteroid belt is a region in the Solar System, located roughly between the orbits of the <a href="planet.html">planets</a> <a href="jupiter.html">Jupiter</a> and <a href="mars.html">Mars</a>. 
-                    It contains many irregularly shaped bodies called asteroids or minor planets. 
+                    The asteroid belt is a region in the <a href="solar-system.html">Solar System</a>, located roughly between the orbits of the <a href="planet.html">planets</a> <a href="jupiter.html">Jupiter</a> and <a href="mars.html">Mars</a>. 
+                    It contains many irregularly shaped bodies called <a href="asteroid.html">asteroids</a> or minor planets. 
                     This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as near-Earth asteroids and trojan asteroids.</p>
                 <h2 class="paragraphheader" id="DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</h2>
                 <p class="paragraph">
                     In 1596, Johannes Kepler assumed that there must be a planet between Mars and Jupiter, due to the gap between the planets. 
                     Three centuries later, in 1801, the first asteroid was discovered. 
-                    It was named Ceres after the Roman goddess of harvest.
+                    It was named <a href="ceres.html">Ceres</a> after the Roman goddess of harvest.
                 </p>
                 <p class="paragraph">
-                    Soon, other objects were discovered - Pallas, Juno, Vesta and Astraea. 
+                    Soon, other objects were discovered - Pallas, Juno, <a href="vesta.html">Vesta</a>, and Astraea. 
                     Scientists decided to classify the objects separately from the planets, calling them "asteroids" instead.
                 </p>
                 <p class="paragraph">
@@ -67,6 +67,7 @@ link: asteroid-belt
                         <p class="caption">Ceres</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
+                    <p class="readmore">Main article: <a href="ceres.html">Ceres</a></p>
                     <p class="paragraph">
                         Ceres is the first asteroid to be discovered. 
                         It is the biggest of the asteroids in the asteroid belt and is the only such one to be a <a href="dwarf-planet.html">dwarf planet</a>. 
@@ -81,6 +82,7 @@ link: asteroid-belt
                         <p class="caption">Vesta</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Vesta">Vesta</h3>
+                    <p class="readmore">Main article: <a href="vesta.html">Vesta</a></p>
                     <p class="paragraph">
                         Vesta is the second biggest asteroid in the asteroid belt. 
                         It is named after the Roman goddess of the home and family. 
