--- a/pages/earth.html
+++ b/pages/earth.html
@@ -11,7 +11,7 @@ link: earth
                         <p class="caption">"The Blue Marble" - Earth seen by Apollo 17</p>
                     </div>
                     <p class="paragraph">
-                        Earth is a <a href="planet.html">planet</a> in the Solar System.
+                        Earth is a <a href="planet.html">planet</a> in the <a href="solar-system.html">Solar System</a>.
                         It is the third planet from the <a href="sun.html">Sun</a> and the biggest of the terrestrial planets.
                         It is the only place that is known to harbor life.
                         Earth has one natural satellite - <a href="moon.html">Moon</a>.
@@ -51,7 +51,7 @@ link: earth
                 </p>
                 <p class="paragraph">
                     Another ancient theory dates back to Anaxagoras in the 5th century BC - Panspermia.
-                    It states that life exist throughout the universe and was brought to Earth by comets and asteroids.
+                    It states that life exist throughout the universe and was brought to Earth by <a href="comet.html">comets</a> and <a href="asteroid.html">asteroids</a>.
                     This theory does not mention how life formed, only the method it was carried to Earth.
                 </p>
                 <p class="paragraph">
