--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -11,20 +11,21 @@ link: jupiter
                         <p class="caption">Jupiter, seen by NASA's Hubble Space Telescope</p>
                     </div>
                     <p class="paragraph">
-                        Jupiter is the largest <a href="planet.html">planet</a> in the Solar System and fifth from the <a href="sun.html">Sun</a>.
+                        Jupiter is the largest <a href="planet.html">planet</a> in the <a href="solar-system.html">Solar System</a> and fifth from the <a href="sun.html">Sun</a>.
                         It is one of two gas giants, composed of hydrogen and helium, with trace amounts of methane, ammonia, ethane and water.
                         It is named after the king of gods and god of the sky in Roman mythology, analogous to Zeus in greek mythology. 
                     </p>
                     <p class="paragraph">
                         The most recognisable feature is the massive Great Red Spot - a long-lasting storm in the atmosphere of Jupiter. 
-                        It has a faint ring and at least 80 <a href="natural-satellite.html">moons</a>.
-                        The four main ones are Ganymede, Callisto, Io and Europe, first discoverd by Galileo in 1610. 
+                        It has a faint ring and at least <a href="satellites-of-jupiter.html">97 moons</a>.
+                        The four main ones are Ganymede, Callisto, Io, and Europe, first discoverd by Galileo in 1610. 
                     </p>
                     <p class="paragraph">
                         Multiple spacecrafts have visited Jupiter, two of which have orbited around it.
                         Pioneer 10 and 11, Voyager 1 and 2 and New Horizons used Jupiter's gravity for accelerating beyond it's orbits to achieve the velocity required to leave the Solar System.
                         Juno is an ongoing mission, studying the atmosphere, deep structure and magnetosphere.
-                        Future missions include ESA's JUICE, NASA's Europa Clipper and CNSA's Tianwen-4.
+                        ESA's JUICE and NASA's Europa Clipper are on their way to Jupiter and its satellites Ganymede, Callisto and Europa.
+                        A future mission is CNSA's Tianwen-4, which is planned to launch in 2035.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Name">Name</h2>
@@ -99,6 +100,7 @@ link: jupiter
                     The main ring is created by the satellites Metis and Adrastea, while the outer ones are shaped by Amalthea and Thebe.
                 </p>
                 <h2 class="paragraphheader" id="Moons">Moons</h2>
+                <p class="readmore">Main article: <a href="satellites-of-jupiter.html">Satellites of Jupiter</a></p>
                 <p class="paragraph">
                     Jupiter has four gravitationally rounded <a href="natural-satellite.html">moons</a> - Ganymede, Callisto, Io and Europa. 
                     They were discovered by Galileo Galilei in 1610 and are called Galilean moons. 
@@ -107,7 +109,7 @@ link: jupiter
                     Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other.
                 </p>
                 <p class="paragraph">
-                    76 other moons are known to orbit Jupiter. 
+                    93 other moons are known to orbit Jupiter. 
                     Just like the four Galilean moons, the rest are assigned names of lovers of Zeus (Greek equivalent of Jupiter) and later their descendants. 
                     They are significantly smaller than the Galilean moons. 
                     The biggest of them is Amalthea, and the most massive is Himalia.
@@ -118,13 +120,14 @@ link: jupiter
                         <p class="caption">Ganymede</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Ganymede">Ganymede</h3>
+                    <p class="readmore">Main article: <a href="ganymede.html">Ganymede</a></p>
                     <p class="paragraph">
                         Ganymede is the largest known satellite in the Solar System.
                         It is larger than the planet <a href="mercury.html">Mercury</a>, but is less massive.
                         The Hubble Space Telescope has discovered evidence for underground saltwater ocean.
                         It has a magnetic field, the only satellite known to have such.
                         The magnetic field is likely affected by the interior ocean.
-                        The future ESA mission JUICE is planned to orbit Ganymede and study the satellite.
+                        The ongoing ESA mission JUICE is planned to orbit Ganymede and study the satellite.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -133,10 +136,11 @@ link: jupiter
                         <p class="caption">Callisto</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Callisto">Callisto</h3>
+                    <p class="readmore">Main article: <a href="callisto.html">Callisto</a></p>
                     <p class="paragraph">
                         Callisto is the second biggest of the Galilean moons.
                         The surface is heavily cratered, covered with craters and white icy spots.
-                        The Galileo spacecraft gathered data from Callisto that shows the possibility of an interior ocean.
+                        The Galileo spacecraft has gathered data from Callisto that shows the possibility of an interior ocean.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -145,6 +149,7 @@ link: jupiter
                         <p class="caption">Io</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Io">Io</h3>
+                    <p class="readmore">Main article: <a href="io.html">Io</a></p>
                     <p class="paragraph">
                         Io is a satellite of Jupiter that is slightly larger than Earth's Moon.
                         It is volcanically active and has hundreds of volcanoes.
@@ -159,18 +164,19 @@ link: jupiter
                         <p class="caption">Europa</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Europa">Europa</h3>
+                    <p class="readmore">Main article: <a href="europa.html">Europa</a></p>
                     <p class="paragraph">
                         Europa is the smallest Galilean moon and is slightly smaller than Earth's Moon.
                         It is an icy moon with a smooth surface full of dark streaks.
                         It is speculated that Europa could have a subsurface ocean where extraterrestrial life could exist.
                         This is similar to Ganymede and Callisto, but there are more evidences showing such ocean on Europa than on the other two moons.
-                        A similar satellite is <a href="saturn.html">Saturn</a>'s moon Enceladus.
-                        NASA is planning to launch the orbiter Europa Clipper in 2024 to study the Europan surface.
+                        A similar satellite is <a href="saturn.html">Saturn</a>'s moon <a href="enceladus.html">Enceladus</a>.
+                        The orbiter Europa Clipper by NASA that was launched in 2024 is planned to study the Europan surface.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Trojans">Trojans</h2>
                 <p class="paragraph">
-                    A large group of asteroids co-orbits with Jupiter, named trojans.
+                    A large group of <a href="asteroid.html">asteroids</a> co-orbits with Jupiter, named trojans.
                     These asteroids are divided in two groups - the Greek camp, lying around the leading Lagrange point (L4), and the Trojan camp, lying around the trailing Lagrange point (L5).
                     The Greek camp includes 7508 known trojans, the biggest of which are 624 Hektor, 911 Agamemnon and 588 Achilles.
                     On the other hand, the Trojan camp has 4044 known asteroids, the biggest of which are 617 Patroclus-Menoetius, 3451 Mentor and 3317 Paris.
@@ -182,7 +188,7 @@ link: jupiter
                     <a href="earth.html">Earth</a> has two known trojans - 2010 TK7 and 2020 XL5.
                 </p>
                 <p class="paragraph">
-                    Another group of asteroids, that are influenced by Jupiter's gravity well is the Hilda asteroids, named after the asteroid 153 Hilda.
+                    Another group of asteroids, that are influenced by Jupiter's gravity well are the Hilda asteroids, named after the asteroid 153 Hilda.
                     They are located outside the <a href="asteroid-belt.html">asteroid belt</a> and within Jupiter's orbit.
                     Their aphelion reaches any of three Lagrange point (L5, L4 and L3) in a sequence.
                 </p>
@@ -210,13 +216,13 @@ link: jupiter
                         Voyager 1 and 2 discovered Jupiter's rings, observed the Galilean moons and found a few moons.
                         Ulysses, a solar probe, performed a flyby around Jupiter to attain a polar orbit around the <a href="sun.html">Sun</a>.
                         The Cassini-Huygens passed Jupiter on it's way to the Saturn system.
-                        The last to fly by Jupiter was New Horizons, a mission aimed at visiting Pluto.
+                        The last to fly by Jupiter was New Horizons, a mission aimed at visiting <a href="pluto.html">Pluto</a>.
                     </p>
                     <p class="paragraph">
                         Galileo was the first Jupiter orbiter.
                         It studied the system and it's moons for seven years, until it's intentional destruction.
                         An atmospheric probe was released into Jupiter to determine the atmospheric composition.
-                        It also witnessed the impact of the comet Shoemaker-Levy 9 with Jupiter.
+                        It also witnessed the impact of the <a href="comet.html">comet</a> Shoemaker-Levy 9 with Jupiter.
                     </p>
                     <p class="paragraph">
                         Juno is the follow-up mission of Galileo.
@@ -225,13 +231,12 @@ link: jupiter
                         The mission is currently extended and will end in 2025, meeting the same fate as Galileo.
                     </p>
                     <p class="paragraph">
-                        Future missions are mostly aimed at Jupiter's moons.
-                        The Jupiter Icy Moons Explorer, a program developed by the ESA, is planned to launch in 2024.
+                        The Jupiter Icy Moons Explorer, a program developed by the ESA, launched in 2023.
                         It will perform several flybys around Jupiter and the moons Europa, Ganymede and Callisto.
                         The last objective is to enter orbit around the biggest moon Ganymede.
-                        NASA plans to launch the Europa Clipper in the same year.
+                        NASA launched the Europa Clipper the next year.
                         The objective is to study Europa, mainly because of it's potential life suspected to inhabit an internal ocean.
-                        CNSA is preparing for launching Tianwen-4 in 2029 with the mission to study the Jovian magnetosphere and atmosphere, as well as Ganymede or Callisto.
+                        CNSA is preparing for launching Tianwen-4 in 2035 with the mission to study the Jovian magnetosphere and atmosphere, as well as Ganymede or Callisto.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h4>
