--- a/pages/mars.html
+++ b/pages/mars.html
@@ -11,7 +11,7 @@ link: mars
                         <p class="caption">Mars as seen by Rosetta</p>
                     </div>
                     <p class="paragraph">
-                        Mars is the fourth <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> and the second smallest in the Solar System.   
+                        Mars is the fourth <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> and the second smallest in the <a href="solar-system.html">Solar System</a>.   
                         Mars is named after the Roman god of war. 
                         It is also known as the Red Planet, the name originating from it's red surface.
                         The planet has a similar composition to that of <a href="earth.html">Earth</a>, but with a thinner atmosphere.
@@ -23,7 +23,7 @@ link: mars
                         Currently no liquid water can remain on the surface, due to the low athmospheric pressure. 
                     </p>
                     <p class="paragraph">
-                        There are two <a href="natural-satellite.html">satellites</a> orbiting around Mars - Phobos and Deimos.
+                        There are two <a href="natural-satellite.html">satellites</a> orbiting around Mars - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>.
                     </p>
                     <p class="paragraph">
                         Mars has been visited by multiple spacecraft, the first success being NASA's Mariner 4.
@@ -145,8 +145,9 @@ link: mars
                 </p>
                 <div class="articlediv">
                     <h2 class="paragraphheader" id="Satellites">Satellites</h2>
+                    <p class="readmore">Main article: <a href="satellites-of-mars.html">Satellites of Mars</a></p>
                     <p class="paragraph">
-                        Mars has two <a href="natural-satellite.html">natural satellites</a> - Phobos and Deimos. 
+                        Mars has two <a href="natural-satellite.html">natural satellites</a> - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>. 
                         They are named after the Greek gods of fear and terror respectively. 
                         Phobos is the bigger of the two and orbits closer to Mars. 
                         Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
@@ -202,7 +203,7 @@ link: mars
                     Rosaviacosmos, later Roskosmos, launched two missions - Mars 96 and Phobos-Grunt, both unsuccessful.
                     The Japanese ISAS failed to send their Mars orbiter Nozomi.
                     ESA has two missions, both still in operation - Mars Express and ExoMars 2016.
-                    The probe Rosetta used Mars gravity assist as a way to reach the comet 67P/Churyumov–Gerasimenko.
+                    The probe Rosetta used Mars gravity assist as a way to reach the <a href="comet.html">comet</a> 67P/Churyumov–Gerasimenko.
                     The Chinese CNSA has one mission (apart from the unsuccessful Yinghuo 1 that was part of Phobos Grunt) to Mars - Tianwen-1.
                     This way China became the second to operate a rover on Mars with Zhurong.
                     ISRO - India's national space agency - was the fourth agency to send a spacecraft to MARS after NASA, the soviet space program and ESA.
