--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -11,7 +11,7 @@ link: mercury
                         <p class="caption">Mercury seen from MESSENGER</p>
                     </div>
                     <p class="paragraph">
-                        Mercury is the smallest and closest <a href="planet.html">planet</a> to the <a href="sun.html">Sun</a> in the Solar System. 
+                        Mercury is the smallest and closest <a href="planet.html">planet</a> to the <a href="sun.html">Sun</a> in the <a href="solar-system.html">Solar System</a>. 
                         Mercury is an inferior planet to <a href="earth.html">Earth</a> and similarly to <a href="venus.html">Venus</a>, it can only be seen as a morning or an evening "star" in the Earth sky.
                         It is named after the Roman god of commerce and the messenger of the gods. 
                     </p>
@@ -53,7 +53,7 @@ link: mercury
                 <p class="paragraph">
                     Mercury is the smallest planet in the Solar system.
                     It has an equatorial radius of 2,440 km.
-                    Two natural satellites in the Solar System, Ganymede and Titan, are more massive than Mercury, but have a small mass.
+                    Two natural satellites in the Solar System, <a href="ganymede.html">Ganymede</a> and <a href="titan.html">Titan</a>, are larger than Mercury, but have a small mass.
                 </p>
                 <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
                 <p class="paragraph">
@@ -76,7 +76,7 @@ link: mercury
                     </p>
                     <p class="paragraph">
                         At the poles, ice remains inside deep craters, where shadows keep them from melting.
-                        The ice was most likely brought by comets.
+                        The ice was most likely brought by <a href="comet.html">comets</a>.
                     </p>
                     <p class="paragraph">
                         Mercury is not volcanically active.
