--- a/pages/moon.html
+++ b/pages/moon.html
@@ -13,7 +13,7 @@ link: moon
                     <p class="paragraph">
                         The Moon is the only <a href="natural-satellite.html">natural satellite</a> orbiting <a href="earth.html">Earth</a>. 
                         It is also the only natural astronomic body other than Earth that has been visited by people. 
-                        It is the fifth largest satellite in the Solar System and is the largest relative to it's parent planet. 
+                        It is the fifth largest satellite in the <a href="solar-system.html">Solar System</a> and is the largest relative to it's parent planet. 
                     </p>
                     <p class="paragraph">
                         The Moon has no magnetic field, a hydrosphere, or a significant athmosphere.
@@ -29,7 +29,7 @@ link: moon
                 </div>
                 <h2 class="paragraphheader" id="Formation">Formation</h2>
                 <p class="paragraph">
-                    The leading theory of the formation of the Moon is that a protoplanet around the size of Mars collided with Earth.
+                    The leading theory of the formation of the Moon is that a protoplanet around the size of <a href="mars.html">Mars</a> collided with Earth.
                     The debris were ejected outside Earth and compressed into a molten magma-covered Moon.
                     With time, the magma cooled down, forming the crust.
                     The Lunar maria were produced by this process.
@@ -128,7 +128,7 @@ link: moon
                     <h3 class="paragraphsubheader" id="LunaProgram">Luna program</h3>
                     <p class="paragraph">
                         After the beginning of the Cold War, the Soviet Union began the development of rockets, known as launch systems, to launch objects outside the <a href="earth.html">Earth</a>.
-                        The launch of Sputnik 1, the first artificial satellite, marked the beginning of the Space Race between the USa and the USSR.
+                        The launch of Sputnik 1, the first artificial satellite, marked the beginning of the Space Race between the USA and the USSR.
                         One of the objectives of the race was to send people to the Moon, as it is the closest celestial object to the Earth.
                         The Soviet Union began it's Luna program.
                         Luna 1 was the first spacecraft to reach the Moon and Luna 2 was the fist to impact the surface.
@@ -184,7 +184,7 @@ link: moon
                 <div class="articlediv">
                     <div class="captionbox right" style="width:322px;">
                         <img class="articleimage" src="../assets/images/other/artemis-1-far-side-moon.jpg" alt="Far side of the Moon seen from Orion" width="320" height="240">
-                        <p class="caption">Artemis 1 mission. The far side of the Moon seen from Orion.</p>
+                        <p class="caption">Artemis I mission. The far side of the Moon seen from Orion.</p>
                     </div>
                     <h3 class="paragraphsubheader" id="LaterMissions">Later missions</h3>
                     <p class="paragraph">
@@ -192,9 +192,10 @@ link: moon
                         The first mission after that period was the Japanese Hiten mission.
                     </p>
                     <p class="paragraph">
-                        NASA sent multiple spacecrafts, including Artemis 1, part of the Artemis program and follow-up to the Apollo Mission.
-                        Artemis 1 was an uncrewed mission to the Moon and is going to be followed by Artemis 2, a crewed Moon-orbiting mission and Artemis 3 and 4, crewed Moon-landing missions.
-                        Multiple CubeSats were deployed during Artemis 1, some of which still in operations.
+                        NASA sent multiple spacecrafts, including Artemis I, part of the Artemis program and follow-up to the Apollo Mission.
+                        Artemis I was an uncrewed mission to the Moon and is going to be followed by Artemis II, a crewed Moon-orbiting mission and Artemis III and IV, crewed Moon-landing missions.
+                        Later Artemis missions are planned to send payload and astronauts for a longer stay on the Moon.
+                        Multiple CubeSats were deployed during Artemis I, some of which still in operations.
                     </p>
                     <p class="paragraph">
                         China began it's Moon program "CLEP" with the orbiter Chang'e 1, followed by Chang'e 2.
@@ -202,7 +203,8 @@ link: moon
                         Three more orbiter mission were launched before the Chang'e 4 mission.
                         It was the first to land on the far side of the Moon and included the Yutu-2 rover.
                         Chang'e 5 was China's first sample return from the Moon.
-                        Upcoming Chinese missions to the Moon are Change 6, 7 and 8, the last of which will 3D print with Lunar resources, and a Crewed Lunar Mission by 2030.
+                        Chang'e 6 completed another sample collection, this time from the far side.
+                        Upcoming Chinese missions to the Moon are Change 7 and 8, the latter of which will 3D print with Lunar resources, and a Crewed Lunar Mission by 2030.
                     </p>
                 </div>
                 <p class="paragraph">
@@ -210,16 +212,17 @@ link: moon
                     The first was the orbiter Chandrayaan-1, which included an impactor and was the first to discover water on the Moon.
                     Chandrayaan-2 is a mission that is still in operation.
                     It included a lander and a rover, but due to a software glitch they crashed into the Moon.
-                    The upcoming Chandrayaan-3 will attemt a soft landing for a second time.
+                    The following Chandrayaan-3 successfully made a soft landing with the Pragyan rover.
                 </p>
                 <p class="paragraph">
                     Other countries and agencies that have sent, or are in the process of sending a spacecraft are ESA, South Korea and the UAE.
                     The first mission made by a private company was Manfred Memorial Moon Mission by the Luxembourg-based LuxSpace.
+                    IM-1 was a lunar lander by Intuitive Machines and the first private mission to land on the moon.
                 </p>
                 <p class="paragraph">
-                    Future missions to the Moon include Artemis 2 - 4, Chang'e 6 - 8, Chandrayaan-3, Luna 25 - 27 (Roscosmos) and many more.
+                    Future missions to the Moon include Artemis II - X, Chang'e 7 - 8, Chandrayaan-4, Luna 26 - 27 (Roscosmos) and many more.
                     Many private companies are planning missions to the Moon.
-                    SpaceX is expected to send nine people around the Moon with dearMoon in 2023.
+                    SpaceX was expected to send nine people around the Moon with dearMoon in 2023, but the project got delayed and subsequently canceled.
                     Blue Origins has plans for a Moon cargo lander, called Blue Moon.
                 </p>
                 <h2 class="paragraphheader" id="CulturalSignificance">Cultural significance</h2>
