--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -10,8 +10,8 @@ link: natural-satellite
                     Natural satellites are also called moons.
                 </p>
                 <p class="paragraph">
-                    Six of the eight planets in the Solar System have at least one satellite. 
-                    Many of the known <a href="dwarf-planet.html">dwarf planets</a> also have satellites, as well as some asteroids.
+                    Six of the eight planets in the <a href="solar-system.html">Solar System</a> have at least one satellite. 
+                    Many of the known <a href="dwarf-planet.html">dwarf planets</a> also have satellites, as well as some <a href="asteroid.html">asteroids</a>.
                 </p>
                 <h2 class="paragraphheader" id="HistoryAndDefiningSatellites">History and defining satellites</h2>
                 <p class="paragraph">
@@ -41,8 +41,9 @@ link: natural-satellite
                 </div>
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="SatellitesOfMars">Satellites of Mars</h3>
+                    <p class="readmore">Main article: <a href="satellites-of-mars.html">Satellites of Mars</a></p>
                     <p class="paragraph">
-                        <a href="mars.html">Mars</a> has two natural satellites - Phobos and Deimos. 
+                        <a href="mars.html">Mars</a> has two natural satellites - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>. 
                         They are named after the Greek gods of fear and terror respectively. 
                         Phobos is the bigger of the two and orbits closer to Mars. 
                         Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
@@ -60,7 +61,7 @@ link: natural-satellite
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="GalileanSatellites">Galilean satellites</h3>
                     <p class="paragraph">
-                        <a href="jupiter.html">Jupiter</a> has four round moons - Ganymede, Callisto, Io and Europa. 
+                        <a href="jupiter.html">Jupiter</a> has four round moons - <a href="moon.html">Ganymede</a>, <a href="moon.html">Callisto</a>, <a href="moon.html">Io</a>, and <a href="moon.html">Europa</a>. 
                         They were discovered by Galileo Galilei in 1610. 
                         Ganymede is the largest known satellite and is bigger than <a href="mercury.html">Mercury</a>. 
                         Of the four, Europa is the only one that is smaller than Earth's Moon. 
@@ -87,16 +88,18 @@ link: natural-satellite
                 </div>
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="OtherJovianSatellites">Other Jovian satellites</h3>
+                    <p class="readmore">Main article: <a href="satellites-of-jupiter.html">Satellites of Jupiter</a></p>
                     <p class="paragraph">
-                        76 other moons are known to orbit Jupiter. 
+                        93 other moons are known to orbit Jupiter. 
                         Just like the four Galilean moons, the rest are assigned names of lovers of Zeus (Greek equivalent of Jupiter) and their descendants. 
                         They are significantly smaller than the Galilean moons. 
                         The biggest of them is Amalthea, and the most massive is Himalia.
                     </p>
                 </div>
                 <h3 class="paragraphsubheader" id="SatellitesOfSaturn">Satellites of Saturn</h3>
+                    <p class="readmore">Main article: <a href="satellites-of-saturn.html">Satellites of Saturn</a></p>
                 <p class="paragraph">
-                    There are 83 moons known to orbit <a href="saturn.html">Saturn</a>. 
+                    There are 274 moons known to orbit <a href="saturn.html">Saturn</a>. 
                     The ones discovered earlier were named after Titans and Giants from Greek mythology. 
                     Subsequent moons were named after other Greek mythological figures, Celtic and Inuit gods and Norse ice giants.
                 </p>
@@ -106,14 +109,14 @@ link: natural-satellite
                         <p class="caption">Titan</p>
                     </div>
                     <p class="paragraph">
-                        The biggest of these is Titan, a satellite bigger than the planet Mercury and smaller than Jupiter's Ganymede. 
+                        The biggest of these is <a href="titan.html">Titan</a>, a satellite bigger than the planet Mercury and smaller than Jupiter's Ganymede. 
                         Titan has a thick orange athmosphere composed mostly of nitrogen and methane. 
                         Liquid methane lakes are concentrated around the poles, the only possible spots on the surface for them to form.
                     </p>
                 </div>
                 <div class="articlediv">
                     <p class="paragraph">
-                        Other round moons are Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                        Other round moons are <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                     </p>
                     <div class="imgwrapper">
                         <div class="captionbox center">
@@ -144,9 +147,10 @@ link: natural-satellite
                 </p>
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="SatellitesOfUranus">Satellites of Uranus</h3>
+                    <p class="readmore">Main article: <a href="satellites-of-uranus.html">Satellites of Uranus</a></p>
                     <p class="paragraph">
-                        27 moons are known to orbit <a href="uranus.html">Uranus</a>, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
-                        The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.
+                        29 moons are known to orbit <a href="uranus.html">Uranus</a>, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                     </p>
                     <div class="imgwrapper">
                         <div class="captionbox center">
@@ -173,9 +177,10 @@ link: natural-satellite
                         <p class="caption">Triton</p>
                     </div>
                     <h3 class="paragraphsubheader" id="SatellitesOfNeptune">Satellites of Neptune</h3>
+                    <p class="readmore">Main article: <a href="satellites-of-neptune.html">Satellites of Neptune</a></p>
                     <p class="paragraph">
-                        There are 14 known <a href="neptune.html">Neptunian</a> satellites, named after Greek water deities. 
-                        The biggest satellite - Triton, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
+                        There are 16 known <a href="neptune.html">Neptunian</a> satellites, named after Greek water deities. 
+                        The biggest satellite - <a href="triton.html">Triton</a>, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
                     </p>
                     <p class="paragraph">
                         The biggest non-planetary satellite in the Solar System is Proteus, which orbits Neptune.
@@ -188,15 +193,15 @@ link: natural-satellite
                     </div>
                     <h2 class="paragraphheader" id="SatellitesOfDwarfPlanets">Satellites of dwarf planets</h2>
                     <p class="paragraph">
-                        Pluto has five satellites - Charon, Hydra, Nix, Kerberos and Styx. 
+                        Pluto has five satellites - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos and Styx. 
                         Names originate from Greek mythology and are related to the underworld. 
                         The biggest moon - Charon, named after the ferryman of the underworld, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
-                    <p class="paragraph">Eris has one moon - Dysnomia, named after the daemon of lawlessness in Greek mythology.</p>
+                    <p class="paragraph">Eris has one moon - <a href="dysnomia.html">Dysnomia</a>, named after the daemon of lawlessness in Greek mythology.</p>
                     <p class="paragraph">Haumea has two satellites - Hiʻiaka and Namaka, both named after Hawaiian deities.</p>
                     <p class="paragraph">Makemake has one satellite, refered to as MK2.</p>
                     <p class="paragraph">
-                        Other dwarf planets with satellites include Gonggong with Xiangliu, Quaoar with Weywot and Orcus with Vanth.
+                        Other dwarf planets with satellites include <a href="gonggong.html">Gonggong</a> with Xiangliu, <a href="quaoar.html">Quaoar</a> with Weywot, and <a href="orcus.html">Orcus</a> with Vanth.
                     </p>
                 </div>
                 <div class="articlediv">
