--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -11,7 +11,7 @@ link: neptune
                         <p class="caption">Neptune as seen by Voyager 2, 1989</p>
                     </div>
                     <p class="paragraph">
-                        Neptune is the eight <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the Solar System. 
+                        Neptune is the eight <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the <a href="solar-system.html">Solar System</a>. 
                         It is the fourth biggest planet in the Solar System, and one of two ice giants, the other being <a href="uranus.html">Uranus</a>.
                         Neptune orbits the Sun once every 164.8 years at an average distance of 30.1 AU from it.
                         It is named after the Roman sea god, the equivalent of the Greek Poseidon. 
@@ -20,7 +20,7 @@ link: neptune
                         The unexplained deviations from the expected orbit of Uranus lead to speculations about the existence of an eight planet.
                         Thus Neptune was discovered in 1846 by Johann Galle. 
                         It is not visible to the naked eye and was discovered by mathematical predictions. 
-                        The biggest Neptunian satellite - Triton was found shortly after and the other 13 we know of today were located until the next century.
+                        The biggest Neptunian satellite - <a href="triton.html">Triton</a> was found shortly after and the other 13 we know of today were located until the next century.
                         Neptune has been visited by Voyager 2 in 1989.
                     </p>
                     <p class="paragraph">
@@ -74,7 +74,7 @@ link: neptune
                     Part of those objects that have a low eccentricity make up the Kuiper belt.
                     Kuiper belt objects are further split into classical (cubewanos) and resonant.
                     The resonant KBOs are in a resonance with Neptune - 1:2 (twotinos), 2:3 (plutinos), 3:4, 3:5, 4:7 or 2:5.
-                    Pluto, the largest <a href="dwarf-planet.html">dwarf planet</a>, is a plutino and because of it's resonance with Neptune, it would not collide despite crossing the Neptunian orbit.
+                    <a href="pluto.html">Pluto</a>, the largest <a href="dwarf-planet.html">dwarf planet</a>, is a plutino and because of it's resonance with Neptune, it would not collide despite crossing the Neptunian orbit.
                 </p>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
@@ -130,20 +130,21 @@ link: neptune
                         <p class="caption">Triton, the largest Neptunian satellite</p>
                     </div>
                     <h2 class="paragraphheader" id="Satellites">Satellites</h2>
+                    <p class="readmore">Main article: <a href="satellites-of-neptune.html">Satellites of Neptune</a></p>
                     <p class="paragraph">
-                        There are 14 known <a href="neptune.html">Neptunian</a> satellites, all named after Greek water deities. 
-                        The biggest satellite - Triton was discovered just 17 years after the discovery of Neptune. 
+                        There are 16 known <a href="neptune.html">Neptunian</a> satellites, all named after Greek water deities. 
+                        The biggest satellite - <a href="triton.html">Triton</a> was discovered just 17 years after the discovery of Neptune. 
                         It is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune, because of it's retrograde orbit. 
-                        Triton is similar to other moons like Ganymede, Europa and Enceladus in that a subsurface ocean might exist under the surface.
+                        Triton is similar to other moons like <a href="ganymede.html">Ganymede</a>, <a href="europa.html">Europa</a>, and <a href="enceladus.html">Enceladus</a> in that a subsurface ocean might exist under the surface.
                     </p>
                     <p class="paragraph">
                         All of the other satellites have an irregular shape.
                         The second discovered moon, Nereid, is an irregular moon with a high 0.7512 eccentricity and a apoapsis seven times the periapsis.
                         More moons were discovered by Voyager 2.
-                        The biggest of them is Proteus, whis is the biggest we know of with an irregular shape, larger than Saturn's Mimas, which is round.
+                        The biggest of them is Proteus, whis is the biggest we know of with an irregular shape, larger than Saturn's <a href="mimas.html">Mimas</a>, which is round.
                         Naiad, Thalassa, Despina and Galatea are within the rings of Neptune.
                         Larissa was the last discovered in 1989.
-                        Since then six more moons were discovered in 2003, 2004 and 2013.
+                        Since then eight more moons were discovered in 2002, 2003, 2013 and 2021.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
