--- a/pages/planet.html
+++ b/pages/planet.html
@@ -7,7 +7,7 @@ link: planet
 
                 <p class="paragraph">
                     Planets are round astronomical bodies, smaller than <a href="star.html">stars</a>.
-                   According to the IAU, a planet is a celestial body that:
+                    According to the IAU, a planet is a celestial body that:
                 </p>
                 <ol class="paragraph">
                     <li>is in orbit around the <a href="sun.html">Sun</a>,</li>
@@ -15,7 +15,7 @@ link: planet
                     <li>has cleared the neighborhood around it's orbit.</li>
                 </ol>
                 <p class="paragraph">
-                    There are 8 planets in the Solar System - <a href="mercury.html">Mercury</a>, <a href="venus.html">Venus</a>, <a href="earth.html">Earth</a>, <a href="mars.html">Mars</a>, <a href="jupiter.html">Jupiter</a>, <a href="saturn.html">Saturn</a>, <a href="uranus.html">Uranus</a> and <a href="neptune.html">Neptune</a>. 
+                    There are 8 planets in the <a href="solar-system.html">Solar System</a> - <a href="mercury.html">Mercury</a>, <a href="venus.html">Venus</a>, <a href="earth.html">Earth</a>, <a href="mars.html">Mars</a>, <a href="jupiter.html">Jupiter</a>, <a href="saturn.html">Saturn</a>, <a href="uranus.html">Uranus</a> and <a href="neptune.html">Neptune</a>. 
                     The first four are known as terrestrial planets, Jupiter and Saturn are called gas giants and Uranus and Neptune are ice giants.
                 </p>
                 <p class="paragraph">
@@ -24,8 +24,8 @@ link: planet
                     The <a href="natural-satellite.html">satellites</a> of planets like Earth's <a href="moon.html">Moon</a>, or the Jovian, Saturnian, Uranian and Neptunian moons were also considered planets for some time.
                 </p>
                 <p class="paragraph">
-                    The same can be said for the asteroids in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like Pluto. 
-                    The biggest asteroid - Ceres, the <a href="tno.html">Trans-Neptunian objects</a> Pluto, Eris, Haumea, Makemake and many more are called <a href="dwarf-planet.html">dwarf planets</a>. 
+                    The same can be said for the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like Pluto. 
+                    The biggest asteroid - <a href="ceres.html">Ceres</a>, the <a href="tno.html">Trans-Neptunian objects</a> <a href="pluto.html">Pluto</a>, <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a>, <a href="makemake.html">Makemake</a> and many more are called <a href="dwarf-planet.html">dwarf planets</a>. 
                     The difference is that unlike regular planets, dwarf planets do not make up the majority of the mass in their orbit.
                 </p>
                 <p class="paragraph">
@@ -50,7 +50,7 @@ link: planet
                 <p class="paragraph">
                     There were speculations, that a ninth planet existed. 
                     In 1930 this planet was believed to be the newly discovered Pluto. 
-                    But after the discovery of many smaller objects beyond Neptune, Pluto's satellite Charon and a "tenth" planet Eris with it's moon Dysnomia lead to the 2006 definition by the International Astronomical Union of what a planet is. 
+                    But after the discovery of many smaller objects beyond Neptune, Pluto's satellite <a href="charon.html">Charon</a> and a "tenth" planet Eris with it's moon <a href="dysnomia.html">Dysnomia</a> lead to the 2006 definition by the International Astronomical Union of what a planet is. 
                     According to it, Pluto, Eris and the other objects didn't meet the last criteria - to "clear the neighborhood", or in other words - to make up most of the mass within their orbits.
                 </p>
                 <h2 class="paragraphheader" id="PlanetsOfTheSolarSystem">Planets of the Solar System</h2>
@@ -110,7 +110,7 @@ link: planet
                         Volcanism exists on Mars - the highest known mountain in the Solar System is Olympus Mons - 21,229 m. 
                         Craters are mostly concentrated in the south, where the surface is older. 
                         There is ice on Mars and evidences show that liquid water might have existed on the Martian surface, but is currently impossible, due to the low athmospheric pressure. 
-                        There are two satellites orbiting around Mars - Phobos and Deimos.
+                        There are <a href="satellites-of-mars.html">two satellites orbiting around Mars</a> - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -124,7 +124,7 @@ link: planet
                         The largest planet in the Solar System, Jupiter is a gas giant like Saturn. 
                         It bears the name of the king of gods and god of the sky in Roman mythology. 
                         The most recognisable feature is the storm, known as Great Red Spot. 
-                        It has a faint ring and at least 80 moons, the four main ones being Ganymede, Callisto, Io and Europe. 
+                        It has a faint ring and at least <a href="satellites-of-jupiter.html">80 moons</a>, the four main ones being <a href="ganymede.html">Ganymede</a>, <a href="callisto.html">Callisto</a>, <a href="io.html">Io</a>, and <a href="europa.html">Europa</a>. 
                         Ganymede is also the biggest satellite in the Solar System, bigger than the planet Mercury.
                     </p>
                 </div>
@@ -140,8 +140,8 @@ link: planet
                         In Roman mythology, Saturn is the god of time and wealth. 
                         Saturn is known for it's prominent rings. 
                         It is visibly flattened at the poles and features a hexagonal cloud at the north pole. 
-                        83 known satellites exist, 53 of them are named. 
-                        The biggest of those moons are Titan (which is bigger than Mercury), Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                        <a href="satellites-of-saturn.html">83 known satellites</a> exist, 53 of them are named. 
+                        The biggest of those moons are <a href="titan.html">Titan</a> (which is bigger than Mercury), <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -153,13 +153,13 @@ link: planet
                     <p class="readmore">Main article: <a href="uranus.html">Uranus</a></p>
                     <p class="paragraph">
                         Uranus is the seventh planet in the Solar System. 
-                        It is the third biggest planet in the Solar System. 
+                        It is the third biggest planet after Jupiter and Saturn. 
                         It is named after the Greek god, who represents the sky. 
                         Uranus, just like the other ice giant Neptune, consists of volatiles (ices), whereas the gas giants are mostly made up of hydrogen and helium. 
                         Just like the other giants, Uranus has a ring system. 
                         Its axis of rotation is tilted sideways, nearly into the plane of its solar orbit. 
-                        27 moons are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
-                        The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.
+                        <a href="satellites-of-uranus.html">27 moons</a> are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -173,8 +173,8 @@ link: planet
                         The smallest giant, Neptune is the last planet in the Solar System. 
                         It is named after the Roman sea god. 
                         It has a ring system and had a Great Dark Spot, similar to the Great Red Spot of Jupiter. 
-                        There are 14 known satellites, named after Greek water deities. 
-                        The biggest satellite - Triton, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
+                        There are <a href="satellites-of-neptune.html">14 known satellites</a>, named after Greek water deities. 
+                        The biggest satellite - <a href="triton.html">Triton</a>, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -191,7 +191,7 @@ link: planet
                     <p class="paragraph">
                         The objects that lead to the IAU's definition of dwarf planets are Pluto, Eris and Ceres. 
                         Haumea and Makemake were later added to the group of dwarf planets defined by the IAU. 
-                        Other astronomers also include other <a href="tno.html">TNOs</a> to the list - Gonggong, Quaoar, Sedna and Orcus. 
+                        Other astronomers also include other <a href="tno.html">TNOs</a> to the list - <a href="gonggong.html">Gonggong</a>, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, and <a href="orcus.html">Orcus</a>. 
                         These nine are widely refered to as dwarf planets, even though some of them are not proven to be in hydrostatic equilibrium (to be round enough). 
                         Other objects that might be dwarf planets are Salacia, Varda, Ixion, Gǃkúnǁʼhòmdímà and Varuna.
                     </p>
