--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -11,7 +11,7 @@ link: saturn
                         <p class="caption">Saturn, seen by the Cassini orbiter</p>
                     </div>
                     <p class="paragraph">
-                        Saturn is the sixth from the <a href="sun.html">Sun</a> and second largest of the eight <a href="planet.html">planets</a> in the Solar System. 
+                        Saturn is the sixth from the <a href="sun.html">Sun</a> and second largest of the eight <a href="planet.html">planets</a> in the <a href="solar-system.html">Solar System</a>. 
                         It is a gas giant like <a href="jupiter.html">Jupiter</a> composed mostly of hydrogen and helium.
                         In Roman mythology, Saturn is the god of time and wealth. 
                     </p>
@@ -20,9 +20,9 @@ link: saturn
                         The atmosphere is less dynamic than that of Jupiter and has less features.
                         Such a feature is the hexagonal cloud at Saturn's north pole. 
                         Saturn is known for it's prominent rings composed of ice, rock and dust. 
-                        There are 83 known <a href="natural-satellite.html">satellites</a> known to orbit the planet, 53 of them are named. 
-                        The biggest of those moons is Titan, which is bigger than Mercury.
-                        Other notable satellites are Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                        There are 274 known <a href="natural-satellite.html">satellites</a> known <a href="satellites-of-saturn.html">to orbit the planet</a>, 66 of them have received permanent designations, and 63 of them are named. 
+                        The biggest of those moons is <a href="titan.html">Titan</a>, which is bigger than <a href="mercury.html">Mercury</a>.
+                        Other notable satellites are <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                         Within the rings are also numerous tiny moonlets.
                     </p>
                     <p class="paragraph">
@@ -104,17 +104,23 @@ link: saturn
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Moons">Moons</h2>
+                <p class="readmore">Main article: <a href="satellites-of-saturn.html">Satellites of Saturn</a></p>
                 <p class="paragraph">
-                    There are 83 <a href="natural-satellite.html">moons</a> known to orbit Saturn. 
-                    The earliest discovered ones were named after Titans and Giants from Greek mythology. 
+                    There are 274 <a href="natural-satellite.html">moons</a> known to orbit Saturn. 
+                    24 are regular satellites that have a relatively stable, circular orbit close to the planet. 
+                    They were named after Titans and Giants from Greek mythology. 
                     Subsequent moons were named after other Greek mythological figures, Celtic and Inuit gods and Norse ice giants.
-                    The biggest moon is Titan, a satellite bigger than the planet <a href="mercury.html">Mercury</a>. 
-                    Other round moons are Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                    The biggest moon is <a href="titan.html">Titan</a>, a satellite bigger than the planet <a href="mercury.html">Mercury</a>. 
+                    Other round moons are <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                 </p>
                 <p class="paragraph">
-                    Out of the irregularly-shaped satellite, Hyperion is the largest and Phoebe is the most massive. 
+                    Out of the irregularly-shaped satellite, Hyperion is the largest. 
                     There are satellites like Atlas, Pan and Daphnis that are refered to as shepherd moons.
                     They have distinct equatorial ridges formed from clearing Saturn's rings.
+                </p>
+                <p class="paragraph">
+                    The remaining 250 are irregular and are split into Norse, Inuit, and Gallic groups. 
+                    The most massive irregularly-shaped satellite - Phoebe - is actually part of the Norse group, while it is named after a Greek Titaness. 
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right">
@@ -122,11 +128,13 @@ link: saturn
                         <p class="caption">Titan</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Titan">Titan</h3>
+                    <p class="readmore">Main article: <a href="titan.html">Titan</a></p>
                     <p class="paragraph">
-                        Titan is the biggest satellite orbiting Saturn and is one of two satellites bigger than the planet Mercury, the other being the Jovian moon Ganymede. 
+                        Titan is the biggest satellite orbiting Saturn and is one of two satellites bigger than the planet Mercury, the other being the Jovian moon <a href="ganymede.html">Ganymede</a>. 
                         Titan has a thick orange athmosphere composed mostly of nitrogen and methane. 
                         Liquid methane lakes are concentrated around the poles, the only possible spots on the surface for them to form.
                         The biggest lakes are Kraken Mare and Ligeia Mare.
+                        The future mission Dragonfly will make a return to Titan in 2028 and will attempt to make a landing and conduct the first powered and fully controlled atmospheric flight on a natural satellite.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -135,6 +143,7 @@ link: saturn
                         <p class="caption">Rhea</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Rhea">Rhea</h3>
+                    <p class="readmore">Main article: <a href="rhea.html">Rhea</a></p>
                     <p class="paragraph">
                         Rhea is the second largest moon of Saturn.
                         The surface is heavily cratered and has some fractures (chasmata) similar to other cratered planetary bodies.
@@ -148,6 +157,7 @@ link: saturn
                         <p class="caption">Iapetus</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Iapetus">Iapetus</h3>
+                    <p class="readmore">Main article: <a href="iapetus.html">Iapetus</a></p>
                     <p class="paragraph">
                         Iapetus is the third biggest moon of Saturn.
                         It is composed mostly of ice and has different coloration on both hemispheres.
@@ -160,6 +170,7 @@ link: saturn
                         <p class="caption">Dione</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Dione">Dione</h3>
+                    <p class="readmore">Main article: <a href="dione.html">Dione</a></p>
                     <p class="paragraph">
                         Dione is the fourth biggest Saturnian moon.
                         Similar to Rhea, Dione is heavily cratered, but features more chasmata and fossae (ridges).
@@ -172,6 +183,7 @@ link: saturn
                         <p class="caption">Tethys</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Tethys">Tethys</h3>
+                    <p class="readmore">Main article: <a href="tethys.html">Tethys</a></p>
                     <p class="paragraph">
                         Tethys is the fifth biggest satellite of Saturn.
                         It is an icy body and has one of the biggest craters on planetary bodies in the Solar System - Odysseus.
@@ -184,12 +196,13 @@ link: saturn
                         <p class="caption">Enceladus</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Enceladus">Enceladus</h3>
+                    <p class="readmore">Main article: <a href="enceladus.html">Enceladus</a></p>
                     <p class="paragraph">
                         Enceladus is the sixth biggest moon of Saturn.
                         It is composed mostly of ice water.
                         Apart from craters, ridges and fractures, it has numerous geysers that shoot water vapors into space, part of which falls back as snow.
-                        It is suspected that liquid water ocean is underneath the ice crust.
-                        The future mission Dragonfly is planned to search for life on Enceladus.
+                        It is suspected that a liquid water ocean is underneath the ice crust, similar to <a href="europa.html">Europa</a>.
+                        Many mission were proposed to search for life on Enceladus, but so far none have been approved.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -198,16 +211,17 @@ link: saturn
                         <p class="caption">Mimas</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Mimas">Mimas</h3>
+                    <p class="readmore">Main article: <a href="mimas.html">Mimas</a></p>
                     <p class="paragraph">
                         Mimas is the smallest of the seven gravitationally-rounded moons of Saturn.
-                        It is smaller than the irregularly-shaped moon of Neptune Proteus.
+                        It is smaller than the irregularly-shaped moon of <a href="neptune.html">Neptune</a> Proteus.
                         A distinctive feature is the crater Herschel, named after the discoverer of Mimas.
                         The moon resembles the fictional Death Star in Star Wars.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="EarlyObservations">Early observations</h2>
                 <p class="paragraph">
-                    The planet is one of the planets known in ancient times.
+                    Saturn is one of the planets known in ancient times.
                     Galileo was the first to look through a telescope at the planet.
                     He was unable to resolve Saturn's rings, thinking they were two moons.
                     Cristiaan Huygens used a telescope with greater magnification.
@@ -236,7 +250,7 @@ link: saturn
                     Discoveries during the mission were evidences of liquid water beneath the Enceladus surface and geysers, hydrocarbon lakes on Titan and new satellites of Saturn.
                 </p>
                 <p class="paragraph">
-                    Proposed missions include a proposed Saturn entry probe and Dragonfly, which will search for life on Titan and Enceladus.
+                    Proposed missions include a Saturn entry probe, Dragonfly, which is a probe that will explore Titan, and a few candidates for a mission to search life on Enceladus.
                 </p>
                 <h2 id="ExternalLinks">External links</h4>
                 <ul>
