--- a/pages/sun.html
+++ b/pages/sun.html
@@ -26,7 +26,7 @@ link: sun
                 <h2 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
-                        <a href="https://en.wikipedia.org/wiki/Sun">https://en.wikipedia.org/wiki/Star</a>
+                        <a href="https://en.wikipedia.org/wiki/Sun">https://en.wikipedia.org/wiki/Sun</a>
                     </li>
                     <li>
                         <a href="https://solarsystem.nasa.gov/solar-system/sun/overview/">https://solarsystem.nasa.gov/solar-system/sun/overview/</a>
