--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -12,15 +12,15 @@ link: uranus
                     </div>
                     <p class="paragraph">
                         Uranus is the seventh <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a>. 
-                        It is also the third biggest planet in the Solar System. 
+                        It is also the third biggest planet in the <a href="solar-system.html">Solar System</a>. 
                         It is named after the Greek god, who represents the sky. 
                     </p>
                     <p class="paragraph">
                         Uranus, similar to the other ice giant <a href="neptune.html">Neptune</a>, consists of volatiles (ices), whereas the gas giants are mostly made up of hydrogen and helium. 
                         Uranus has a ring system like other giants. 
                         Its axis of rotation is tilted sideways, nearly into the plane of its solar orbit. 
-                        27 <a href="natural-satellite.html">moons</a> are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
-                        The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.
+                        29 <a href="natural-satellite.html">moons</a> are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                     </p>
                     <p class="paragraph">
                         Voyager 2 is the only spacecraft that has visited Uranus.
@@ -43,7 +43,7 @@ link: uranus
                     Uranus was observed before it was proven to be a planet.
                     The earliest definite record is in 1690, when the english astronomer John Flamsteed catalogued it as 34 Tauri.
                     In 1781 sir William Herschel looked through a telescope, discovering the object.
-                    He originally mistook it for a comet, but based on his findings, other astronomers identified it as a planet.
+                    He originally mistook it for a <a href="comet.html">Miranda</a>comet</a>, but based on his findings, other astronomers identified it as a planet.
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right" style="width:262px;">
@@ -107,21 +107,22 @@ link: uranus
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Satellites">Satellites</h2>
+                <p class="readmore">Main article: <a href="satellites-of-uranus.html">Satellites of Uranus</a></p>
                 <div class="articlediv">
                     <div class="captionbox right" style="width:122px;">
                         <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
                         <p class="caption">Titania, the biggest moon of Uranus</p>
                     </div>
                     <p class="paragraph">
-                        There are 27 <a href="natural-satellite.html">moons</a> known to orbit Uranus, five of which are round.
+                        There are 29 <a href="natural-satellite.html">moons</a> known to orbit Uranus, five of which are round.
                         All of the moons are named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
-                        The biggest one is Titania, followed by Oberon, Umbriel, Ariel and the smallest - Miranda.
+                        The biggest one is <a href="titania.html">Titania</a>, followed by <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and the smallest - <a href="miranda.html">Miranda</a>.
                         All of the moons are relatively dark, with Umbriel being the darkest.
                         They are made of rock and ice and feature craters, canyons and scarps.
                         Miranda is unique, as it features extremely large scarps on it's surface like the 20km high Verona Rupes.
                     </p>
                     <p class="paragraph">
-                        The other 22 moons are divided into inner and irregular.
+                        The other 24 moons are divided into inner and irregular.
                         The inner moons orbit within Miranda's orbit, the closest to Uranus of the five round moons.
                         The biggest of them is Puck.
                         All of the  irregular moons orbit outside Oberon's orbit, the farthest round moon from Uranus.
