--- a/pages/venus.html
+++ b/pages/venus.html
@@ -11,7 +11,7 @@ link: venus
                         <p class="caption">Venus, seen by Mariner 10</p>
                     </div>
                     <p class="paragraph">
-                        Venus is the second <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the Solar System.
+                        Venus is the second <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the <a href="solar-system.html">Solar System</a>.
                         It is slightly smaller than <a href="earth.html">Earth</a> and is often called a "sister" planet of Earth.
                         It is the brightest of the planets on the Earth sky, caused by the proximity to the Earth and the high albedo of the atmosphere and clouds. 
                         Venus is named after the Roman goddes of love and beauty. 
