--- a/pages/tno.html
+++ b/pages/tno.html
@@ -13,18 +13,18 @@ link: tno
                 <p class="paragraph">
                     The first TNO to be discovered was Pluto in 1930. 
                     In 1992 a second object - 15760 Albion, was discovered. 
-                    Pluto is the largest TNO and Eris is the most massive.
+                    <a href="pluto.html">Pluto</a> is the largest TNO and <a href="eris.html">Eris</a> is the most massive.
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     In the 1900s, it was suggested that a ninth <a href="planet.html">planet</a> existed beyond Neptune's orbit, which would explain the deviation of the actual from the expected orbit of Neptune. 
                     In 1930 Pluto was discovered, but was too small to explain these discrepancies. 
-                    Still, it was considered a planet of the Solar System. 
+                    Still, it was considered a planet of the <a href="solar-system.html">Solar System</a>. 
                     In 1992 another TNO was discovered - 15760 Albion. 
                     This lead to further searches.
                 </p>
                 <p class="paragraph">
-                    More TNOs were found - Varuna, Ixion, Quaoar, Sedna and Haumea. 
+                    More TNOs were found - Varuna, Ixion, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, and <a href="haumea.html">Haumea</a>. 
                     With the discovery of Eris, the most massive TNO, the International Astronomical Union announced in 2006 that objects like Pluto and Eris would be classified as <a href="dwarf-planet.html">dwarf planets</a> - a new class of objects.
                 </p>
                 <h2 class="paragraphheader" id="Classification">Classification</h2>
@@ -36,7 +36,7 @@ link: tno
                         The latter ones are locked in a orbital resonance with <a href="neptune.html">Neptune</a>.
                     </p>
                     <p class="paragraph">
-                        The biggest cubewanos are Haumea, Makemake and Quaoar, while the biggest resonant KBO is Pluto. 
+                        The biggest cubewanos are Haumea, <a href="makemake.html">Makemake</a>, and Quaoar, while the biggest resonant KBO is Pluto. 
                         Resonant KBOs with 2:3 resonance are thus called plutinos.
                     </p>
                 </div>
@@ -62,11 +62,12 @@ link: tno
                         <p class="caption">Pluto and it's biggest satellite - Charon.</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Pluto">Pluto</h3>
+                    <p class="readmore">Main article: <a href="pluto.html">Pluto</a></p>
                     <p class="paragraph">
                         Pluto is the biggest TNO and <a href="dwarf-planet.html">dwarf planet</a> in the Solar System. 
                         It is named after the Greek god of the underworld, also known as Hades. 
                         Pluto has five <a href="natural-satellite.html">satellites</a>. 
-                        The biggest moon - Charon, named after the ferryman of Hades, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
+                        The biggest moon - <a href="charon.html">Charon</a>, named after the ferryman of Hades, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
                     <p class="paragraph">Pluto and Charon were visited by New Horizon in 2015.</p>
                 </div>
